force-app/main/default/objects/CustomObject1__c/CustomObject1__c.object-meta.xml
<CustomObject>
    <description>시승 신청 완료 후 정보
모델, 거점, 시승 방식, 시간슬롯 등 모두 저장</description>
    <label>시승 신청 정보</label>
    <nameField>
        <label>시승 신청 정보 이름</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>시승 신청 정보</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>