force-app/main/default/objects/CustomObject1__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>신청자 정보</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>시승 신청 정보</relationshipLabel>
    <relationshipName>TestDriveInfo</relationshipName>
    <type>Lookup</type>
</CustomField>