force-app/main/default/objects/CustomObject1__c/fields/DesiredSlot__c.field-meta.xml
<CustomField>
    <fullName>DesiredSlot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>선택한 시간 슬롯</label>
    <referenceTo>TestDriveSlot__c</referenceTo>
    <relationshipLabel>시승 신청 정보</relationshipLabel>
    <relationshipName>TestDriveInfo</relationshipName>
    <type>Lookup</type>
</CustomField>