force-app/main/default/objects/CustomObject1__c/fields/DriveMethod__c.field-meta.xml
<CustomField>
    <fullName>DriveMethod__c</fullName>
    <label>신청한 시승 방식</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>