force-app/main/default/objects/CustomObject1__c/fields/FlagshipStore__c.field-meta.xml
<CustomField>
    <fullName>FlagshipStore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>선택한 플래그십 스토어</label>
    <referenceTo>Flagship_Store__c</referenceTo>
    <relationshipLabel>시승 신청 정보</relationshipLabel>
    <relationshipName>TestDriveInfo</relationshipName>
    <type>Lookup</type>
</CustomField>