force-app/main/default/objects/CustomObject1__c/fields/Lead2__c.field-meta.xml
<CustomField>
    <fullName>Lead2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>리드2</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>시승 신청 정보</relationshipLabel>
    <relationshipName>TestDriveInfo</relationshipName>
    <type>Lookup</type>
</CustomField> 