force-app/main/default/objects/CustomObject1__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>특이사항</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>