force-app/main/default/objects/CustomObject1__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>기회</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>시승 신청 정보</relationshipLabel>
    <relationshipName>TestDriveInfo</relationshipName>
    <type>Lookup</type>
</CustomField> 