force-app/main/default/objects/CustomObject1__c/fields/VehicleModel__c.field-meta.xml
<CustomField>
    <fullName>VehicleModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>신청한 모델</label>
    <referenceTo>VehicleModel__c</referenceTo>
    <relationshipLabel>시승 신청 정보</relationshipLabel>
    <relationshipName>TestDriveInfo</relationshipName>
    <type>Lookup</type>
</CustomField>